{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 141,
  "lineage": "8dcc5f23-7180-97ac-5efb-6f5f9301bb06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f55c067a910c1e2",
            "arn": "arn:aws:ec2:us-east-1:414392949667:elastic-ip/eipalloc-02f55c067a910c1e2",
            "association_id": "eipassoc-093e33beca8e8bf8a",
            "domain": "vpc",
            "id": "eipalloc-02f55c067a910c1e2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05a6f56648d0bd790",
            "private_dns": "ip-10-169-1-246.ec2.internal",
            "private_ip": "10.169.1.246",
            "public_dns": "ec2-107-20-239-234.compute-1.amazonaws.com",
            "public_ip": "107.20.239.234",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "classic-nat-eip"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c1fe732b5494dc14",
            "arn": "arn:aws:ec2:us-east-1:414392949667:instance/i-045f732451e4cf910",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "classic-app-profile",
            "id": "i-045f732451e4cf910",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f578437641727d09"
              }
            ],
            "primary_network_interface_id": "eni-0f578437641727d09",
            "private_dns": "ip-10-169-11-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.169.11.205",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "ManagedBy": "Terraform"
                },
                "tags_all": {
                  "ManagedBy": "Terraform"
                },
                "throughput": 125,
                "volume_id": "vol-0530917f6883dd687",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f782a2b78a8b547b",
            "tags": {
              "Name": "classic-app-0"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-app-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-002410e3f4ad8fd3e"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "i-045f732451e4cf910",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.classic_profile",
            "aws_iam_role.classic_app_role",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_app",
            "aws_route_table.public",
            "aws_route_table_association.private_app",
            "aws_route_table_association.public",
            "aws_security_group.app_sg",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.classic_vpc",
            "data.aws_iam_policy_document.classic_assume_role",
            "data.aws_ssm_parameter.al2023_ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c1fe732b5494dc14",
            "arn": "arn:aws:ec2:us-east-1:414392949667:instance/i-0a9cc42487d35b8b9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "classic-app-profile",
            "id": "i-0a9cc42487d35b8b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0aec8bb88bb6dc8fc"
              }
            ],
            "primary_network_interface_id": "eni-0aec8bb88bb6dc8fc",
            "private_dns": "ip-10-169-12-46.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.169.12.46",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "ManagedBy": "Terraform"
                },
                "tags_all": {
                  "ManagedBy": "Terraform"
                },
                "throughput": 125,
                "volume_id": "vol-0427cc22c6faae510",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019c05a0983bcc092",
            "tags": {
              "Name": "classic-app-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-app-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-002410e3f4ad8fd3e"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "i-0a9cc42487d35b8b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.classic_profile",
            "aws_iam_role.classic_app_role",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_app",
            "aws_route_table.public",
            "aws_route_table_association.private_app",
            "aws_route_table_association.public",
            "aws_security_group.app_sg",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.classic_vpc",
            "data.aws_iam_policy_document.classic_assume_role",
            "data.aws_ssm_parameter.al2023_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:internet-gateway/igw-0a95678ffb35b5e69",
            "id": "igw-0a95678ffb35b5e69",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "tags": {
              "Name": "classic-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-igw"
            },
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:loadbalancer/app/classic-alb/d934d4afa8c1afff",
            "arn_suffix": "app/classic-alb/d934d4afa8c1afff",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "classic-alb-1639270208.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:414392949667:loadbalancer/app/classic-alb/d934d4afa8c1afff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "classic-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e46143ebc70322cb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06a07b199e1c965a2"
              },
              {
                "subnet_id": "subnet-09e20c6a0415db4c9"
              }
            ],
            "subnets": [
              "subnet-06a07b199e1c965a2",
              "subnet-09e20c6a0415db4c9"
            ],
            "tags": {
              "Name": "classic-alb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-alb"
            },
            "vpc_id": "vpc-07a4bc9b4cd2d1c94",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:loadbalancer/app/classic-alb/d934d4afa8c1afff"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:listener/app/classic-alb/d934d4afa8c1afff/2c7a4ae6a2a405bc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/classic-app-tg/5f07d25375524398",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414392949667:listener/app/classic-alb/d934d4afa8c1afff/2c7a4ae6a2a405bc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:loadbalancer/app/classic-alb/d934d4afa8c1afff",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:listener/app/classic-alb/d934d4afa8c1afff/2c7a4ae6a2a405bc"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/classic-app-tg/5f07d25375524398",
            "arn_suffix": "targetgroup/classic-app-tg/5f07d25375524398",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/classic-app-tg/5f07d25375524398",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:414392949667:loadbalancer/app/classic-alb/d934d4afa8c1afff"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "classic-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "classic-app-tg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/classic-app-tg/5f07d25375524398"
          },
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/classic-app-tg/5f07d25375524398-20260216183849409600000003",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/classic-app-tg/5f07d25375524398",
            "target_id": "i-045f732451e4cf910"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.classic_profile",
            "aws_iam_role.classic_app_role",
            "aws_instance.app",
            "aws_internet_gateway.igw",
            "aws_lb_target_group.app_tg",
            "aws_nat_gateway.nat",
            "aws_route_table.private_app",
            "aws_route_table.public",
            "aws_route_table_association.private_app",
            "aws_route_table_association.public",
            "aws_security_group.app_sg",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.classic_vpc",
            "data.aws_iam_policy_document.classic_assume_role",
            "data.aws_ssm_parameter.al2023_ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/classic-app-tg/5f07d25375524398-20260216183849451300000004",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:414392949667:targetgroup/classic-app-tg/5f07d25375524398",
            "target_id": "i-0a9cc42487d35b8b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_iam_instance_profile.classic_profile",
            "aws_iam_role.classic_app_role",
            "aws_instance.app",
            "aws_internet_gateway.igw",
            "aws_lb_target_group.app_tg",
            "aws_nat_gateway.nat",
            "aws_route_table.private_app",
            "aws_route_table.public",
            "aws_route_table_association.private_app",
            "aws_route_table_association.public",
            "aws_security_group.app_sg",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.classic_vpc",
            "data.aws_iam_policy_document.classic_assume_role",
            "data.aws_ssm_parameter.al2023_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f55c067a910c1e2",
            "association_id": "eipassoc-093e33beca8e8bf8a",
            "connectivity_type": "public",
            "id": "nat-045049fbedeb0753a",
            "network_interface_id": "eni-05a6f56648d0bd790",
            "private_ip": "10.169.1.246",
            "public_ip": "107.20.239.234",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06a07b199e1c965a2",
            "tags": {
              "Name": "classic-nat"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:route-table/rtb-0fa4d01b083ec43d2",
            "id": "rtb-0fa4d01b083ec43d2",
            "owner_id": "414392949667",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-045049fbedeb0753a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "classic-rt-private-app"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-rt-private-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "rtb-0fa4d01b083ec43d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:route-table/rtb-01ae5e571bc25c330",
            "id": "rtb-01ae5e571bc25c330",
            "owner_id": "414392949667",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "classic-rt-private-db"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-rt-private-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "rtb-01ae5e571bc25c330",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:route-table/rtb-0b8ac857a9521a3ca",
            "id": "rtb-0b8ac857a9521a3ca",
            "owner_id": "414392949667",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a95678ffb35b5e69",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "classic-rt-public"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "rtb-0b8ac857a9521a3ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b46fc1e2c28a0e1d",
            "region": "us-east-1",
            "route_table_id": "rtb-0fa4d01b083ec43d2",
            "subnet_id": "subnet-0f782a2b78a8b547b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.classic_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff4d38ce1e7c6c2d",
            "region": "us-east-1",
            "route_table_id": "rtb-0fa4d01b083ec43d2",
            "subnet_id": "subnet-019c05a0983bcc092"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0264eb0d6cd470b65",
            "region": "us-east-1",
            "route_table_id": "rtb-01ae5e571bc25c330",
            "subnet_id": "subnet-0d58f7cc55ce4c822"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db",
            "aws_vpc.classic_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f4be21ee98a3e66",
            "region": "us-east-1",
            "route_table_id": "rtb-01ae5e571bc25c330",
            "subnet_id": "subnet-06b136f9c02932e93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056fc5eabb441e2e7",
            "region": "us-east-1",
            "route_table_id": "rtb-0b8ac857a9521a3ca",
            "subnet_id": "subnet-06a07b199e1c965a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.classic_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018bdf877ece95e3a",
            "region": "us-east-1",
            "route_table_id": "rtb-0b8ac857a9521a3ca",
            "subnet_id": "subnet-09e20c6a0415db4c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group/sg-0e46143ebc70322cb",
            "description": "ALB ingress from internet",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "ALB to app on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002410e3f4ad8fd3e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0e46143ebc70322cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "classic-alb-sg",
            "name_prefix": "",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "classic-alb-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sg-0e46143ebc70322cb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group/sg-002410e3f4ad8fd3e",
            "description": "App instances - only ALB can reach HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App outbound (via NAT)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002410e3f4ad8fd3e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e46143ebc70322cb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "classic-app-sg",
            "name_prefix": "",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "classic-app-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sg-002410e3f4ad8fd3e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group/sg-046c9cb05c676d031",
            "description": "DB only reachable from app tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046c9cb05c676d031",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from app tier only",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002410e3f4ad8fd3e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "classic-db-sg",
            "name_prefix": "",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "classic-db-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sg-046c9cb05c676d031",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-0f782a2b78a8b547b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.169.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f782a2b78a8b547b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "classic-private-app-0"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-private-app-0"
            },
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-0f782a2b78a8b547b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-019c05a0983bcc092",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.169.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019c05a0983bcc092",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "classic-private-app-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-private-app-1"
            },
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-019c05a0983bcc092",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-0d58f7cc55ce4c822",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.169.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d58f7cc55ce4c822",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "classic-private-db-0"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-private-db-0"
            },
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-0d58f7cc55ce4c822",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-06b136f9c02932e93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.169.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b136f9c02932e93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "classic-private-db-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-private-db-1"
            },
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-06b136f9c02932e93",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-06a07b199e1c965a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.169.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a07b199e1c965a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "classic-public-0"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-public-0"
            },
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-06a07b199e1c965a2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:subnet/subnet-09e20c6a0415db4c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.169.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e20c6a0415db4c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414392949667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "classic-public-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-public-1"
            },
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "subnet-09e20c6a0415db4c9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "classic_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc/vpc-07a4bc9b4cd2d1c94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.169.0.0/16",
            "default_network_acl_id": "acl-0510272867f6d7b54",
            "default_route_table_id": "rtb-0d86dc1e136ff25b3",
            "default_security_group_id": "sg-0b3e8c7ff9498b3e2",
            "dhcp_options_id": "dopt-00c5775a73b9d13e0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a4bc9b4cd2d1c94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d86dc1e136ff25b3",
            "owner_id": "414392949667",
            "region": "us-east-1",
            "tags": {
              "Name": "classic"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpc-07a4bc9b4cd2d1c94",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:vpc-endpoint/vpce-082ad1d94b7773bc5",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-082ad1d94b7773bc5",
            "ip_address_type": "ipv4",
            "owner_id": "414392949667",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0fa4d01b083ec43d2"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "classic-ddb-endpoint"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "classic-ddb-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-07a4bc9b4cd2d1c94"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "vpce-082ad1d94b7773bc5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_app",
            "aws_subnet.public",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-0c18dae2f227164d3",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ALB to app on 80",
            "from_port": 80,
            "id": "sgr-0c18dae2f227164d3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-002410e3f4ad8fd3e",
            "region": "us-east-1",
            "security_group_id": "sg-0e46143ebc70322cb",
            "security_group_rule_id": "sgr-0c18dae2f227164d3",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-0c18dae2f227164d3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-08d28794c3cde27e8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "App outbound (via NAT)",
            "from_port": null,
            "id": "sgr-08d28794c3cde27e8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-002410e3f4ad8fd3e",
            "security_group_rule_id": "sgr-08d28794c3cde27e8",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-08d28794c3cde27e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-0209da42f32bb61e0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0209da42f32bb61e0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-046c9cb05c676d031",
            "security_group_rule_id": "sgr-0209da42f32bb61e0",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-0209da42f32bb61e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-04481b51d84e30632",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from internet",
            "from_port": 80,
            "id": "sgr-04481b51d84e30632",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0e46143ebc70322cb",
            "security_group_rule_id": "sgr-04481b51d84e30632",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-04481b51d84e30632",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_http_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-082f70ef8c755bb4d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "HTTP from ALB only",
            "from_port": 80,
            "id": "sgr-082f70ef8c755bb4d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e46143ebc70322cb",
            "region": "us-east-1",
            "security_group_id": "sg-002410e3f4ad8fd3e",
            "security_group_rule_id": "sgr-082f70ef8c755bb4d",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-082f70ef8c755bb4d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.app_sg",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_from_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414392949667:security-group-rule/sgr-04a7955e659ca5ec0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Postgres from app tier only",
            "from_port": 5432,
            "id": "sgr-04a7955e659ca5ec0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-002410e3f4ad8fd3e",
            "region": "us-east-1",
            "security_group_id": "sg-046c9cb05c676d031",
            "security_group_rule_id": "sgr-04a7955e659ca5ec0",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414392949667",
            "id": "sgr-04a7955e659ca5ec0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.db_sg",
            "aws_vpc.classic_vpc"
          ]
        }
      ]
    }
  ]
}